<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Southeastern Ohio Legal Services</string>

    // Parse channels
    <string name="pushEnabled">PushEnabled</string>
    <string name="pushDisabled">PushDisabled</string>

    <!-- navigation drawer titles !-->
    <string name="title_section1">Home</string>
    <string name="title_section2">DIY Forms</string>
    <string name="title_section3">Legal Info</string>
    <string name="title_section4">Local Offices</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- action bar titles !-->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- frament_main.xml !-->
    <string name="welcome">Welcome to the mobile home of Southeastern Ohio Legal Services! \n\nProviding free legal advice and representation to Southeastern Ohio</string>
    <string name="apply">Request Our Services</string>
    <string name="contact_local_office">Locate your Local Office</string>
    <string name="legal_information">Legal Advice and Information</string>
    <string name="diy_forms">Do-it-Yourself Forms</string>

    <!-- county selection layouts !-->
    <string name="countySelection">Which counties would you like to receive information about? Choose as many as you like</string>
    <string-array name="countyNames">
        <item value="Adams">Adams</item>
        <item value="Athens">Athens</item>
        <item value="Belmont">Belmont</item>
        <item value="Carroll">Carroll</item>
        <item value="Coshocton">Coshocton</item>
        <item value="Fairfield">Fairfield</item>
        <item value="Fayette">Fayette</item>
        <item value="Gallia">Gallia</item>
        <item value="Guernsey">Guernsey</item>
        <item value="Harrison">Harrison</item>
        <item value="Hocking">Hocking</item>
        <item value="Holmes">Holmes</item>
        <item value="Jackson">Jackson</item>
        <item value="Jefferson">Jefferson</item>
        <item value="Knox">Knox</item>
        <item value="Lawrence">Lawrence</item>
        <item value="Licking">Licking</item>
        <item value="Meigs">Meigs</item>
        <item value="Monroe">Monroe</item>
        <item value="Morgan">Morgan</item>
        <item value="Muskingum">Muskingum</item>
        <item value="Noble">Noble</item>
        <item value="Perry">Perry</item>
        <item value="Pickaway">Pickaway</item>
        <item value="Pike">Pike</item>
        <item value="Ross">Ross</item>
        <item value="Scioto">Scioto</item>
        <item value="Tuscarawas">Tuscarawas</item>
        <item value="Vinton">Vinton</item>
        <item value="Washington">Washington</item>
        <item value="Other">Other</item>
    </string-array>
    <string name="subscribeToCounties">Choose Counties</string>
    <string name="confirmation_toast">Your selections have been saved</string>

    <!-- settings layout strings!-->
    <string name="settings">Settings</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="home_county">What County You Live In:</string>
    <string name="selected_counties">Counties to Receive Push Notifications</string>
    
    <!-- request services layout and fragment !-->
    <string name="name">Name</string>
    <string name="request_services">Request Our Services</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="opposing_parties">List the people or companies that your dispute is with</string>
    <string name="address">You Address</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="State">State / Province / Region</string>
    <string name="zip">Postal / Zip Code</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone Number</string>
    <string name="phone_1_2">###</string>
    <string name="phone_3">####</string>
    <string name="age">Your Age</string>
    <string name="military">Have you or a household member ever served in the military?</string>
    <string name="household_size">Number of adults in your home</string>
    <string name="submit_request">Submit Request</string>
    <string name="request_services_url">https://oslsa.wufoo.com/forms/request-for-services/</string>
    <string-array name="household_size">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10+</item>
    </string-array>


</resources>
