<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="center_horizontal"
        android:padding="10dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"
        android:background="@drawable/red_button"
        android:padding="10dp"
        android:layout_margin="1dp"
        android:gravity="center_horizontal|center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_local_office"
        android:background="@drawable/blue_button"
        android:padding="10dp"
        android:layout_margin="1dp"
        android:gravity="center_horizontal|center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:text="@string/legal_information"
        android:padding="10dp"
        android:layout_margin="1dp"
        android:gravity="center_horizontal|center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button"
        android:padding="10dp"
        android:text="@string/diy_forms"
        android:layout_margin="1dp"
        android:gravity="center_horizontal|center_vertical"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button"
        android:padding="10dp"
        android:text="@string/client_signin"
        android:gravity="center_vertical|center_horizontal"
        android:layout_margin="1dp"
        />

</LinearLayout>
